[package]
name = "gategen2"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "The library to generate Gate circuits (second version)."
repository = "https://github.com/matszpk/gategen2"
documentation = "https://docs.rs/gategen2"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]

[dependencies]
gateutil = "0.1.0"
gate_calc_log_bits = "0.1.0"
itoap = "1.0"
thiserror = "2.0"
generic-array = "1.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
